--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "git://github.com/papandreou/passerror"
   },
   "main": "lib/passError.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {},
   "devDependencies": {
     "mocha": "1.13.0",
