--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "passerror",
   "description": "Simple helper for handling error and success with two different callbacks",
   "version": "1.1.0",
+  "license": "BSD-3-Clause",
   "repository": {
     "url": "git://github.com/papandreou/passerror"
   },
