--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Andreas Lind <andreas@one.com>",
+  "author": "Andreas Lind <andreaslindpetersen@gmail.com>",
   "name": "passerror",
   "description": "Simple helper for handling error and success with two different callbacks",
   "version": "1.1.1",
